<resources>
    <string name="app_name">GHreport</string>
    <string name="title_activity_login">Sign in</string>

    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_phone_number">Phone Number</string>

    <string name="googleSignToken">629066523099-evshdbtdqvi6poq4js4j42rgn0aj6elh.apps.googleusercontent.com</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="prompt_firsname">First name</string>
    <string name="prompt_lastname">Last name</string>
    <string name="prompt_phone_number">Phone Number</string>
    <string name="prompt_organization">Organization</string>
    <string name="sign_up">Sign Up</string>
    <string name="action_sign_in">Sign in </string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="title_activity_post">Reported Isuues</string>

    <string name="title_activity_send_post">SendPostActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_camera">CameraActivity</string>
</resources>
